--- a/titelblad.tex
+++ b/titelblad.tex
@@ -5,7 +5,7 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
 
 \center % Center everything on the page
- 
+
 %----------------------------------------------------------------------------------------
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
@@ -18,9 +18,11 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}\\[0.4cm] % Title of your document
+{ \huge \bfseries Digital signal processing:
+
+On-edge CNN}\\[0.4cm] % Title of your document
 \HRule \\[1.5cm]
- 
+
 %----------------------------------------------------------------------------------------
 %	AUTHOR SECTION
 %----------------------------------------------------------------------------------------
@@ -28,8 +30,8 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Student:}\\
-Luc \textsc{Van Leuven} \\ % Your name
-Jan \textsc{Peeters} % Your name
+Brecht \textsc{Ooms} \\ % Your name
+% Jan \textsc{Peeters} % Your name
 
 
 
@@ -39,8 +41,8 @@ Jan \textsc{Peeters} % Your name
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Begeleiders:} \\
-Patrick \textsc{Colleman} \\% Supervisor's Name
-%Peter \textsc{Karsmakers} % second supervisor's Name
+Lode \textsc{Vuegen} \\% Supervisor's Name
+Suraj \textsc{Khan} % second supervisor's Name
 
 
 \end{flushright}
@@ -54,14 +56,14 @@ Patrick \textsc{Colleman} \\% Supervisor's Name
 %	DATE SECTION
 %----------------------------------------------------------------------------------------
 
-{\large 1 mei 201x}\\[2cm] % Date, change the \today to a set date if you want to be precise
+{\large \today}\\[2cm] % Date, change the \today to a set date if you want to be precise
 
 %----------------------------------------------------------------------------------------
 %	LOGO SECTION
 %----------------------------------------------------------------------------------------
 
 \includegraphics[width=2.5in]{logokuleuven.png}\\[1cm] % Include a department/university logo - this % will require the graphicx package
- 
+
 %----------------------------------------------------------------------------------------
 
 \vfill % Fill the rest of the page with whitespace
