--- a/tekst.tex
+++ b/tekst.tex
@@ -25,8 +25,8 @@ Het is echter niet zo simpel om de machine learning code, die geoptimaliseerd is
 
 Het doel van dit project is met een Convolutional Neural Netwerk (CNN) geluidsevents te classificeren.
 Die geluidsevents kunnen bijvoorbeeld spraak, een handenklap, gefluit of achtergrondgeluid zijn.
-Dat is relatief simpel uit te voeren op een normale PC, maar het is dus niet praktisch om alle geluidsdata van meerdere meetpunten centraal te verwerken in real time.
-Ook is het niet kost-effectief om overal aparte PC's te plaatsen. In dit project gaan we dus het getraind CNN op een microcontroller uitvoeren om geluid van de ingebouwde microfoon te classificeren.
+Dat is relatief simpel uit te voeren op een normale computer, maar het is dus niet praktisch om alle geluidsdata van meerdere meetpunten centraal te verwerken in real time.
+Ook is het niet kost-effectief om overal aparte computers te plaatsen. In dit project gaan we dus het getraind CNN op een microcontroller uitvoeren om geluid van de ingebouwde microfoon te classificeren.
 
 \section{Log-Mel feature extraction}
 
@@ -75,7 +75,7 @@ De  Log-Mel feature extraction gebeurt in deze 5 stappen:
 		            \begin{itemize}[label={}]
 			            \item \(m'_b = \frac{\ln\left( m_b \right) - \mu_b}{\sigma_b}\)
 		            \end{itemize}
-		      \item Als allerlaatste pre-processingstap gaan we de data schalen zodat die zich in het interval \(\left[ -1,1 \right]\) bevind. Zo kunnen ze opgeslagen worden in Q0.7 formaat. (Zie hoofdstuk \ref{section:Qm.f} op pagina \pageref{section:Qm.f})
+		      \item Als allerlaatste pre-processingstap gaan we de data schalen zodat die zich in het interval \(\left[ -1,1 \right]\) bevind. Zo kunnen ze opgeslagen worden in Q0.7 formaat. (Zie hoofdstuk~\ref{section:Qm.f} op pagina~\pageref{section:Qm.f})
 	      \end{itemize}
 \end{enumerate}
 \end{no-awa}
@@ -93,9 +93,9 @@ De  Log-Mel feature extraction gebeurt in deze 5 stappen:
 \section{Convolutional Neural Network (CNN)}
 
 Om met de Log-Mel samples geluidsevents te kunnen herkennen, gebruik ik een Convolutional Neural Network (CNN). Ons model bestaat uit meerdere verschillende lagen. De belangrijkste lagen zijn de convolutielagen. De eerste convolutielaag past een 2D-convolutie toe op het Log-Mel-spectrum met een bepaald aantal filters. Die filters gaan we optimaliseren met machine learning.
-Na elke convolutielaag voegen we een ReLU activation laag toe. (niet weergegeven op afbeelding \ref{fig:cnn-model}) De ReLU activatiefunctie is snel en gemakkelijk te berekenen, \cite{enwiki:relu} maar kan soms lijden tot een 'vanishing gradient'. \cite{enwiki:vanishing-gradient}
+Na elke convolutielaag voegen we een ReLU activation laag toe. (niet weergegeven op figuur~\ref{fig:cnn-model}) De ReLU activatiefunctie is snel en gemakkelijk te berekenen, \cite{enwiki:relu} maar kan soms lijden tot een 'vanishing gradient'. \cite{enwiki:vanishing-gradient}
 
-Om de dimensionaliteit van onze lagen kleiner te maken, introduceren wij een max pooling laag na elke activatielaag. Die laag neemt het maximum van een aantal waardes en laat de rest vallen. Daarna plaatsen wij een dropout laag. (niet weergegeven op afbeelding \ref{fig:cnn-model}) Die gaat willekeurig, met een kans van 50 \%, de resultaten van verschillende convolutiefilters met nul vermenigvuldigen en dus laten vallen. Dit is om overfitting tijdens het trainen tegen te gaan.
+Om de dimensionaliteit van onze lagen kleiner te maken, introduceren wij een max pooling laag na elke activatielaag. Die laag neemt het maximum van een aantal waardes en laat de rest vallen. Daarna plaatsen wij een dropout laag. (niet weergegeven op figuur~\ref{fig:cnn-model}) Die gaat willekeurig, met een kans van 50 \%, de resultaten van verschillende convolutiefilters met nul vermenigvuldigen en dus laten vallen. Dit is om overfitting tijdens het trainen tegen te gaan.
 
 \begin{figure}[ht]
 	\centering
@@ -111,15 +111,54 @@ Die vier lagen (convolutie, activatie, max pooling en dropout) herhalen we drie 
 
 \subsection{Trainen van het model}
 \subsubsection{Installatie Python en Tensorflow}
-Het trainen van het model hebben we gewoon gedaan op onze PC's in python. Hiervoor hebben wij de Keras uit de TensorFlow package gebruikt. Het installeren van alle benodigde packages ging echter niet vlekkeloos. Uit de TensorFlow documentatie konden we afleiden dat we specifiek Python 3.8 moesten installeren in plaats van de meest up-to-date versie van python. Dan bleek dat er nog meer packages nodig waren. Toch kon ik het relatief snel alle problemen oplossen.
+Het trainen van het model hebben we gewoon gedaan op onze computers in python. Hiervoor hebben wij de Keras uit de TensorFlow package gebruikt. Het installeren van alle benodigde packages ging echter niet vlekkeloos. Uit de TensorFlow documentatie konden we afleiden dat we specifiek Python 3.8 moesten installeren in plaats van de meest up-to-date versie van python. Dan bleek dat er nog meer packages nodig waren. Toch kon ik het relatief snel alle problemen oplossen.
 
 % TODO: Decide if I leave this paragraph in or not
-Voor Python gebruik ik Visual Studio Code, een all round text editor, om de code te schrijven en Powershell, een command line interface, om mijn Python omgeving manueel te managen. Ik vermoed dat ik, door deze ervaring met Python projecten handmatig op te starten, gemakkelijker alle installatieproblemen kon vinden en oplossen.
+Voor Python gebruik ik Visual Studio Code, een all round text editor, om de code te schrijven en Powershell, een command line interface, om mijn Python omgeving manueel te managen. Ik vermoed dat ik, door die ervaring met Python projecten handmatig op te starten, gemakkelijker alle installatieproblemen kon vinden en oplossen.
 Een requirements.txt file \cite{pip-user-guide} had bijvoorbeeld al een goede hulp geweest voor het installeren van de juiste packages.
 
 \subsubsection{Resultaten}
+Ik heb mijn model 400 epochs getrained in plaats van 250. Ik was namelijk vroeg klaar met al de rest en heb zo dus wat extra getained om te kunnen vergelijken. Omdat de model loss lager is bij 400 epochs dan bij 250 epochs, kunnen we afleiden dat het model waarschijnlijk beter is na 400 epochs. (zie figuur~\ref{fig:cnn-training})
 
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figuren/cnn_model.png}
+	\caption{Loss van het model per epoch}
+	\label{fig:cnn-training}
+\end{figure}
 
+In de confusion matrix (tabel~\ref{tab:confusion-matrix}) kunnen we zien dat het model het moeilijkste spraak kan detecteren.
+Ik vermoed dat dat is omdat spraak het meest complexe spectrum zal geven. Achtergrondgeluid zal waarschijnlijk gewoon zacht geluid zijn, handgeklap is een luide impuls en fluiten is een relatief zuivere constante toon.
+Al bij al is het model wel vrij correct.
+
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{ |c|c|c|c|c||c| }
+		\cline{2-6}
+		\multicolumn{1}{c| }{} & Predicted: & Predicted: & Predicted: & Predicted: &       \\
+		\multicolumn{1}{c| }{} & background & handclap   & speech     & whistle    & Total \\
+
+		\hline Actual:         &            &            &            &            &       \\
+		background             & 25         & 0          & 0          & 0          & 25    \\
+
+		\hline Actual:         &            &            &            &            &       \\
+		handclap               & 1          & 23         & 1          & 0          & 25    \\
+
+		\hline Actual:         &            &            &            &            &       \\
+		speech                 & 0          & 3          & 22         & 0          & 25    \\
+
+		\hline Actual:         &            &            &            &            &       \\
+		whistle                & 0          & 0          & 0          & 25         & 25    \\
+		\hline\hline
+		                       &            &            &            &            &       \\
+		Total                  & 26         & 26         & 23         & 25         & 100   \\
+		\hline
+	\end{tabular}
+	\caption{Confusion matrix}
+	\label{tab:confusion-matrix}
+\end{table}
+
+% TODO: Talk about F1 Score and such
 
 \section{Edge implementatie}
 
