--- a/bronnen.bib
+++ b/bronnen.bib
@@ -52,6 +52,14 @@
   note         = {[Online; accessed 16-April-2021]}
 }
 
+@misc{enwiki:floating-point,
+  author       = {{Wikipedia contributors}},
+  title        = {Floating-point arithmetic --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2021},
+  howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Floating-point_arithmetic&oldid=1018358952}},
+  note         = {[Online; accessed 17-April-2021]}
+}
+
 @inproceedings{IEEE:very-deep-cnn-raw-waveforms,
   author    = {Dai, W and Dai, C and Qu, S and Li, J and Das, S},
   booktitle = {2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
